# C-Quadratic-Sieve

./: 64-bits-factorization.c  CMakeLists.txt  README.markdown  README.md  avl.c  big-num.c  block-lanczos.c  cint.c  example-result.csv  example-result.json  fac_headers.h  fac_lanczos.c  fac_quadratic.c  fac_testing.c  fac_utils.c  headers.h  main.c  manager.c  quadratic-sieve.c  rand-inputs-size-1.txt  rand-inputs-size-2.txt
.github/workflows/: README.markdown  build-executables.yml  compilation-with-optimizations.yaml  compilation-with-optimizations.yml  cross-platform.yaml  cross-platform.yml  factorization-different-base-size.yaml  factorize-oeis-1.yaml  factorize-oeis-1.yml  factorize-oeis-2.yaml  factorize-oeis-2.yml  factorize-oeis.yaml  json-csv-outputs.yaml  json-csv-outputs.yml  large-numbers.yml  medium-sized-numbers.yml  memory-safety.yaml  oeis-factorization.yaml  optimal-multiplier.yaml  optimal-multiplier.yml  qs-factor-base-size.yaml  small-numbers.yml  trivial-numbers.yaml  trivial-numbers.yml  verbosity-functional-independence.yaml  verbosity-functional-independence.yml  verbosity-levels.yaml  very--large-numbers.yml
.github/workflows/performance/: README.markdown
.github/workflows/scripts/: csv-verifier.py  oeis-lists.sh  oeis-manual.sh  oeis-multiple.sh  oeis-single.sh
examples/: README.markdown  example-result.csv
